# mc-discord-bot

./: .gitignore  Cargo.toml  notes.txt  readme.md
src/: discord.rs  log_parser.rs  main.rs  process.rs  stdin_forward.rs  user_jvm_args.txt
