[package]
name = "mc-discord-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.11.2", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "process", "io-std"] }
futures = "0.3.21"

serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"